--- a/app/src/main/res/layout/activity_diary_screen.xml
+++ b/app/src/main/res/layout/activity_diary_screen.xml
@@ -13,10 +13,53 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_margin="30dp"
-            android:text="Hi, Manu\nHow are you feeling today?"
+            android:text="Hi, Manu💙\nHow are you feeling today?"
             android:textSize="24sp"
-            android:fontFamily="@font/emilys_candy"
-            >
+            android:textColor="#041365"
+            android:fontFamily="@font/emilys_candy">
+        </TextView>
+
+        <ScrollView
+            android:id="@+id/scrollview"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_below="@id/himsg"
+            android:layout_margin="10dp"
+            android:background="@drawable/background">
+
+                <TextView
+                    android:id="@+id/e1"
+                    android:layout_width="70dp"
+                    android:layout_height="50dp"
+                    android:text="😄"
+                    android:textSize="60sp"
+                    android:layout_margin="10dp">
+
+                </TextView>
+
+
+
+        </ScrollView>
+
+        <TextView
+            android:id="@+id/describe"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/scrollview"
+            android:layout_margin="20dp"
+            android:text="Describe your state of mind"
+            android:textSize="24sp"
+            android:textColor="#041365"
+            android:fontFamily="@font/emilys_candy">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:layout_below="@id/describe"
+            android:background="@drawable/background"
+            android:layout_margin="20dp">
 
         </TextView>
 
