--- a/app/src/main/res/layout/activity_diary_screen.xml
+++ b/app/src/main/res/layout/activity_diary_screen.xml
@@ -13,33 +13,148 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_margin="30dp"
+            android:fontFamily="@font/emilys_candy"
             android:text="Hi, Manu💙\nHow are you feeling today?"
-            android:textSize="24sp"
             android:textColor="#041365"
-            android:fontFamily="@font/emilys_candy">
+            android:textSize="24sp">
+
         </TextView>
 
-        <ScrollView
+        <HorizontalScrollView
             android:id="@+id/scrollview"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="140dp"
             android:layout_below="@id/himsg"
-            android:layout_margin="10dp"
-            android:background="@drawable/background">
+            android:layout_margin="10dp">
 
-                <TextView
-                    android:id="@+id/e1"
-                    android:layout_width="70dp"
-                    android:layout_height="50dp"
-                    android:text="😄"
-                    android:textSize="60sp"
-                    android:layout_margin="10dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="140dp">
 
-                </TextView>
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:layout_margin="20dp"
+                            app:cardCornerRadius="25dp"
+                            >
+                                <TextView
+                                    android:id="@+id/emoji1"
+                                    android:background="@drawable/background"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="100dp"
+                                    android:text="😄"
+                                    android:layout_marginTop="0dp"
+                                    android:textSize="60sp"
+                                    android:gravity="center_horizontal">
+                                </TextView>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="20dp"
+                                    android:layout_marginTop="70dp"
+                                    android:text="Cheerful"
+                                    android:textSize="16sp"
+                                    android:textColor="#041365"
+                                    android:fontFamily="@font/emilys_candy"
+                                    android:gravity="center">
+
+                                </TextView>
+
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:layout_margin="20dp"
+                            app:cardCornerRadius="25dp"
+                            >
+                                <TextView
+                                    android:id="@+id/emoji2"
+                                    android:background="@drawable/background"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="100dp"
+                                    android:text="😌"
+                                    android:layout_marginTop="0dp"
+                                    android:textSize="60sp"
+                                    android:gravity="center_horizontal">
+                                </TextView>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="20dp"
+                                    android:layout_marginTop="70dp"
+                                    android:text="Relaxed"
+                                    android:textColor="#041365"
+                                    android:fontFamily="@font/emilys_candy"
+                                    android:textSize="16sp"
+                                    android:gravity="center">
+
+                                </TextView>
+
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:layout_margin="20dp"
+                            app:cardCornerRadius="25dp"
+                            >
+                                <TextView
+                                    android:id="@+id/emoji3"
+                                    android:background="@drawable/background"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="100dp"
+                                    android:text="😐"
+                                    android:layout_marginTop="0dp"
+                                    android:textSize="60sp"
+                                    android:gravity="center_horizontal">
+                                </TextView>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="20dp"
+                                    android:layout_marginTop="70dp"
+                                    android:text="Neutral"
+                                    android:textSize="16sp"
+                                    android:fontFamily="@font/emilys_candy"
+                                    android:textColor="#041365"
+                                    android:gravity="center">
+
+                                </TextView>
+
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:layout_margin="20dp"
+                            app:cardCornerRadius="25dp"
+                            >
+                                <TextView
+                                    android:id="@+id/emoji4"
+                                    android:background="@drawable/background"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="100dp"
+                                    android:text="😔"
+                                    android:layout_marginTop="0dp"
+                                    android:textSize="60sp"
+                                    android:gravity="center_horizontal">
+                                </TextView>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="20dp"
+                                    android:layout_marginTop="70dp"
+                                    android:text="Sad"
+                                    android:textColor="#041365"
+                                    android:fontFamily="@font/emilys_candy"
+                                    android:textSize="16sp"
+                                    android:gravity="center">
+
+                                </TextView>
+
+                        </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
 
 
-
-        </ScrollView>
+        </HorizontalScrollView>
 
         <TextView
             android:id="@+id/describe"
@@ -54,14 +169,14 @@
 
         </TextView>
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:layout_below="@id/describe"
             android:background="@drawable/background"
             android:layout_margin="20dp">
 
-        </TextView>
+        </EditText>
 
 
 
